app/assets/stylesheets/home.css.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

// this is necessary to prevent 100% height SVG
// elements from generating a scrollbar
svg { vertical-align: top; }

body {
  overflow: hidden;
  height: 200000px;
  width: 200000px;
}

#main-content {
  height: 100%;
  width: 100%;
}

a#help {
  display: block;
  font-size: 0.65em;
  margin-top: 2px;
  color: #0000CB;
}
a#help:visited {
  color: #0000CB;
}

#footer-panel a#help {
  background-color: rgba(245, 245, 245, 0.75);
  position: fixed;
  bottom: 46px;
  padding: 4px 20px 6px 20px;
  border-radius: 10px;
  font-size: 16px;
}
#footer-panel a#help.timeline-adjust {
  bottom: 122px;
}

#site-header {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   font-size: 1.2em;
   padding: 5px 10px;
   border-bottom: 2px solid #999;
   background-color: #f5f5f5;
   color: #444;
   font-weight: bold;
   #left-header {
      float:left;
      p {
        margin: 10px 0 0 10px;
      }
      #key {
        font-size: 0.6em;
        margin: 8px 0 0 15px;
        padding: 5px 0px 5px 10px;
        .key {
          position: relative;
          top: -3px;
          margin-right: 10px;
          font-size:1.3em;
        }
        label {
          margin-right: 5px;
          position: relative;
          top: -3px;
        }
        .block {
          width: 16px;
          height: 16px;
          border: 1px solid #aaa;
          display: inline-block;
          position: relative;
          top: 2px;
          margin-right: 10px;
          border-radius: 10px;
        }
        .resource{
          background-color: #0868ac;
        }
        .genre{
          background-color: #006d2c;
        }
        .discipline {
          background-color: #b30000;
        }
        .format {
          background-color: #810f7c;
        }
        span.selected {
          font-size: 1.2em;
          color: black;
        }
        .text-button {
          cursor: pointer;
        }
        .text-button label {
          cursor: pointer;
        }
      }
   }
}

footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: 1.2em;
  padding: 5px 10px;
  border-bottom: 2px solid #999;
  background-color: #f5f5f5;
  color: #444;
  font-weight: bold;
  height: 62px;
  overflow: hidden;
}
#wait-container {
  position: absolute;
  top: 25%;
  left: 50%;
  #wait {
    position: relative;
    left: -50%;
    border: 1px solid black;
    border-radius: 10px;
    padding: 25px;
    width: 170px;
    text-align: center;
    margin: 25% 0;
    box-shadow: 3px 3px 10px black;
    background-color: white;

    p {
      margin: 0 0 15px 0;
      color: #666;
      font-weight: bold;
      font-size: 1.1em;
    }
  }
}

.node {
  cursor: pointer;
//   stroke: #059;
  stroke-width: 1px;
}
.node > text {
  fill: white;
}
.node > text.empty {
  fill: rgba(255,255,255,0.5);
}

.leaf.resource.disabled,
.fixed.resource.disabled {
  stroke: #444;
  fill: url(/#gradient-resource-disabled);
}

.leaf.resource.disabled.menu,
.fixed.resource.disabled.menu {
  stroke: #444;
  fill: url(/#gradient-resource-disabled-selected);
}


.leaf {
}
.leaf.resource {
  fill: url(/#gradient-resource-normal);
  //  fill: #5ae;
  stroke: #0868ac;
}
.leaf.genre {
  fill: url(/#gradient-genre-normal);
  //  fill: #0b8;
  stroke: #006d2c;
}
.leaf.format {
  fill: url(/#gradient-format-normal);
//  fill: #a90;
  stroke: #810f7c;
}
.leaf.discipline {
  fill: url(/#gradient-discipline-normal);
//  fill: #b66;
  stroke: #b30000;
}

.leaf.no-data {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}

// parent is only used for resource/archive nodes
.parent {
  fill: url(/#gradient-resource-parent);
  stroke: #000050;
  //  stroke-width: 2px;
}
.parent.menu {
  fill: url(/#gradient-resource-parent-selected);
  stroke: #0000A0;
  //  stroke-width: 2px;
}
.parent.resource {
  stroke: #0868ac;
}
.parent.genre {
  stroke: #006d2c;
}
.parent.format {
  stroke: #810f7c;
}
.parent.discipline {
  stroke: #b30000;
}

.empty.discipline {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}
.empty.format {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}
.empty.genre {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}
.empty.resource {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}

/**
 * Special node / states
 */
.root, .parent.root {
  stroke: #444;
  fill: url(/#gradient-arc-root-normal);
}
.root.menu, .parent.root.menu {
  fill: url(/#gradient-arc-root-selected);
}

.link.trace, .parent.trace, .leaf.trace {
  stroke-width: 4px;
  stroke: white;
}
.fixed {
  filter: url(/#drop-shadow)
}
.fixed.resource {
  fill: url(/#gradient-resource-fixed);
}
.fixed.genre {
  fill: url(/#gradient-genre-fixed);
}
.fixed.format {
  fill: url(/#gradient-format-fixed);
}
.fixed.discipline {
  fill: url(/#gradient-discipline-fixed);
}


.menu {
}
.menu.resource {
  fill: url(/#gradient-resource-selected);
}
.menu.genre {
  fill: url(/#gradient-genre-selected);
}
.menu.format {
  fill: url(/#gradient-format-selected);
}
.menu.discipline {
  fill: url(/#gradient-discipline-selected);
}

.collapsed {
//  fill: #555;
  stroke: #888;
//  stroke-width: 2px;
}
.collapsed.resource {
  fill: url(/#gradient-resource-collapsed);
}
.collapsed.genre {
  fill: url(/#gradient-genre-collapsed);
}
.collapsed.format {
  fill: url(/#gradient-format-collapsed);
}
.collapsed.discipline {
  fill: url(/#gradient-discipline-collapsed);
}

.link {
   fill: none;
   stroke: #666;
   stroke-width: 1px;
}

td.label {
  word-break: normal;
}
/* ... */

